[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json2pdf_converter"
version = "0.1"

authors = [{name="Jigyashu Nager"}]

description = "A package to convert JSON to PDF."
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pandas",
  "jinja2",
  "PyPDF2",
  "pdfkit"
]



